# xpara-gui

./: README.md  package.json
src/: index.html  keys.html  main.js  oracle.html  receive.html  rng.html  send.html  sign.html  staking.html  styles.css  token.html  tokens.html  upow.html  wallets.html  xpara.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
