[package]
name = "xpara"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1.4"
pqcrypto-sphincsplus = "0.7.1"
pqcrypto-traits = "0.3.5"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.4"
bincode = "1.3"
aes-gcm = "0.10"
pbkdf2 = "0.11"
sha2 = "0.10"
rand = "0.8"
hmac = "0.12"
